Revert "- Move GPXTools to a package"
This reverts commit d72733b091c71962c1a5f69450b3539a76f7c5a0.